# serverside_pivot

./: .gitignore  .tmp_app_err.txt  .tmp_app_out.txt  .tmp_profile_server_out.txt  AGENT_INTERFACE.md  ANALYSIS_REPORT.md  BENCHMARK.md  CACHE_COORDINATOR.md  CAPABILITIES.md  CHANGELOG.md  CURRENT_IMPLEMENTATION_AUDIT.md  EDIT_SYSTEM_ARCHITECTURE.md  KNOWN_ISSUES.md  PIVOT_MASTER_DOCUMENTATION.md  README.md  RUNTIME_REQUEST_LIFECYCLE.md  __tmp_profile_app.py  __tmp_run_profile_server.py  benchmark_vs_aggrid.py  conftest.py  debug_app_pipeline.py  example_app.py  pytest.ini  reproduce_sort_bug.py  test_sort_e2e.py
dash_tanstack_pivot/: .babelrc  MANIFEST.in  __init__.py  package-info.json  package.json  pyproject.toml
dash_tanstack_pivot/dash_tanstack_pivot/: 559.dash_tanstack_pivot.min.js  559.dash_tanstack_pivot.min.js.LICENSE.txt  ColumnFilter.py  DashTanstackPivot.py  DetailDrawer.py  DetailSidePanel.py  DetailSurfaceContent.py  EditSidePanel.py  EditableCell.py  FilterPopover.py  InlineDetailPanel.py  MultiSelectFilter.py  PivotAppBar.py  ReportEditor.py  SidebarPanel.py  SparklineCell.py  StatusBar.py  __init__.py  _imports_.py  dash_tanstack_pivot.min.js  dash_tanstack_pivot.min.js.LICENSE.txt  metadata.json  package-info.json  package.json  setup.py  webpack.config.js
dash_tanstack_pivot/pivot_engine/: .gitignore  ENTERPRISE_GAP_ANALYSIS.md  LICENSE  README.md  __init__.py  benchmark.py  compare_methods.py  complete_rest_api.py  controller.py  debug_controller.py  debug_cursor.py  debug_deep.py  debug_duckdb.py  debug_sql_generation.py  flight_server.py  hierarchical_scroll_manager.py  intelligent_prefetch_manager.py  materialized_hierarchy_manager.py  pruning_manager.py  reproduce_expansion.py  requirements.txt  scalable_pivot_controller.py  security.py  tanstack_adapter.py  test_arrow_conversion.py  test_async_changes.py  test_backend.py  tree.py  (+11 more)
(+274 files in other folders)
