[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serverside-pivot"
version = "0.0.65"
description = "A Dash component library for enterprise-grade pivot tables built with TanStack Table v8"
license = {text = "MIT"}
authors = [
    {name = "Ramzy"}
]
classifiers = [
    "Framework :: Dash",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: User Interfaces",
]
keywords = ["dash", "pivot", "tanstack", "table", "analytics"]
requires-python = ">=3.8"
dependencies = [
    "dash>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Ramzy22/serverside_pivot"
Repository = "https://github.com/Ramzy22/serverside_pivot.git"
Issues = "https://github.com/Ramzy22/serverside_pivot/issues"

[project.optional-dependencies]
redis = [
    "redis>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "build>=0.10.0",
]

[tool.setuptools]
packages = [
    "dash_tanstack_pivot",
    "dash_tanstack_pivot.dash_tanstack_pivot",
    "pivot_engine",
    "pivot_engine.cache",
    "pivot_engine.cdc",
    "pivot_engine.common",
    "pivot_engine.diff",
    "pivot_engine.planner",
    "pivot_engine.runtime",
    "pivot_engine.streaming",
]

[tool.setuptools.package-dir]
pivot_engine = "pivot_engine/pivot_engine"

[tool.setuptools.package-data]
dash_tanstack_pivot = [
    "*.js",
    "*.js.map",
    "*.json",
]
pivot_engine = ["**/*.py", "**/*.json", "**/*.html"]
